优化细节